; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/dwc2/extr_gadget.c_dwc2_gadget_handle_isoc_bna.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/dwc2/extr_gadget.c_dwc2_gadget_handle_isoc_bna.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc2_hsotg_ep = type { i64, i64, i32, i32, %struct.dwc2_hsotg* }
%struct.dwc2_hsotg = type { i32 }

@TARGET_FRAME_INITIAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dwc2_hsotg_ep*)* @dwc2_gadget_handle_isoc_bna to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dwc2_gadget_handle_isoc_bna(%struct.dwc2_hsotg_ep* %0) #0 {
  %2 = alloca %struct.dwc2_hsotg_ep*, align 8
  %3 = alloca %struct.dwc2_hsotg*, align 8
  store %struct.dwc2_hsotg_ep* %0, %struct.dwc2_hsotg_ep** %2, align 8
  %4 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %5 = getelementptr inbounds %struct.dwc2_hsotg_ep, %struct.dwc2_hsotg_ep* %4, i32 0, i32 4
  %6 = load %struct.dwc2_hsotg*, %struct.dwc2_hsotg** %5, align 8
  store %struct.dwc2_hsotg* %6, %struct.dwc2_hsotg** %3, align 8
  %7 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %8 = getelementptr inbounds %struct.dwc2_hsotg_ep, %struct.dwc2_hsotg_ep* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load %struct.dwc2_hsotg*, %struct.dwc2_hsotg** %3, align 8
  %13 = call i32 @dwc2_flush_rx_fifo(%struct.dwc2_hsotg* %12)
  br label %14

14:                                               ; preds = %11, %1
  %15 = load %struct.dwc2_hsotg*, %struct.dwc2_hsotg** %3, align 8
  %16 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %17 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %18 = call i32 @get_ep_head(%struct.dwc2_hsotg_ep* %17)
  %19 = call i32 @dwc2_hsotg_complete_request(%struct.dwc2_hsotg* %15, %struct.dwc2_hsotg_ep* %16, i32 %18, i32 0)
  %20 = load i32, i32* @TARGET_FRAME_INITIAL, align 4
  %21 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %22 = getelementptr inbounds %struct.dwc2_hsotg_ep, %struct.dwc2_hsotg_ep* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 8
  %23 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %24 = getelementptr inbounds %struct.dwc2_hsotg_ep, %struct.dwc2_hsotg_ep* %23, i32 0, i32 1
  store i64 0, i64* %24, align 8
  %25 = load %struct.dwc2_hsotg_ep*, %struct.dwc2_hsotg_ep** %2, align 8
  %26 = getelementptr inbounds %struct.dwc2_hsotg_ep, %struct.dwc2_hsotg_ep* %25, i32 0, i32 0
  store i64 0, i64* %26, align 8
  ret void
}

declare dso_local i32 @dwc2_flush_rx_fifo(%struct.dwc2_hsotg*) #1

declare dso_local i32 @dwc2_hsotg_complete_request(%struct.dwc2_hsotg*, %struct.dwc2_hsotg_ep*, i32, i32) #1

declare dso_local i32 @get_ep_head(%struct.dwc2_hsotg_ep*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
